# libparser

./: CMakeLists.txt  README.md
grammar/: generate  grammar_scanner_loader.bnf  regex_parser.bnf  regex_scanner.bnf
grammar/src/: GrammarLoaderParserBuffer.cpp  GrammarLoaderParserBuffer.h  GrammarLoaderScannerBuffer.cpp  GrammarLoaderScannerBuffer.h  RegexLoaderBuffer.cpp  RegexLoaderBuffer.h
include/parser/: Automata.h  AutomataOperations.h  DynamicAutomata.h  FileInput.h  Grammar.h  GrammarLoader.h  GrammarLoaderBufferLoader.h  GrammarLoaderLoader.h  GrammarLoaderProceduralLoader.h  IOError.h  (+28 more)
main/: ArgumentOptions.cpp  ArgumentOptions.h  main.cpp
test/: CMakeLists.txt
test/grammar/: parser1.bnf  parser2.bnf  parser_c.bnf  parser_c_preproc.bnf  scanner1.bnf  scanner2.bnf  scanner_c.bnf  scanner_c_preproc.bnf
test/input/: input1.txt  input_c1.txt  input_parser1.txt  input_parser2.txt  input_parser_error1.txt  input_parser_error2.txt
test/src/: AutomataOperationsTest.cpp  AutomataOperationsTest.h  AutomataTestUtility.cpp  AutomataTestUtility.h  CGrammarTest.cpp  CGrammarTest.h  DynamicAutomataTest.cpp  DynamicAutomataTest.h  FirstFollowTest.cpp  FirstFollowTest.h  GrammarLoaderLoaderTest.cpp  GrammarLoaderLoaderTest.h  InputTest.cpp  InputTest.h  MultInputTest.cpp  MultInputTest.h  ParserErrorTest.cpp  ParserErrorTest.h  ParserLoaderTest.cpp  ParserLoaderTest.h  ParserTest.cpp  ParserTest.h  RegexLoaderTest.cpp  RegexLoaderTest.h  RegexTest.cpp  RegexTest.h  ScannerGrammarTest.cpp  ScannerGrammarTest.h  ScannerTest.cpp  ScannerTest.h  TestDefs.h  main.cpp
(+34 files in other folders)
