cmake_minimum_required(VERSION 2.8.12)

PROJECT(LIBPARSER)

FILE(GLOB_RECURSE sources ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
FILE(GLOB_RECURSE generated_sources ${CMAKE_CURRENT_SOURCE_DIR}/grammar/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/grammar/*.h)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/main)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/grammar/src)

ADD_LIBRARY(parser STATIC ${sources} ${generated_sources})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

SET(GENDIR ${CMAKE_CURRENT_SOURCE_DIR}/main)
ADD_EXECUTABLE(parsergen ${GENDIR}/main.cpp ${GENDIR}/ArgumentOptions.cpp)

TARGET_LINK_LIBRARIES(parsergen parser)
